--- a/sites/all/themes/sediscap/sass/global.scss
+++ b/sites/all/themes/sediscap/sass/global.scss
@@ -1,14 +1,27 @@
 @import 'compass';
 
+// @import url(http://fonts.googleapis.com/css?family=Cabin:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600);
+// @import url(http://fonts.googleapis.com/css?family=Lusitana:400,700);
+@import url(http://fonts.googleapis.com/css?family=PT+Serif+Caption:400,400italic);
+
 $blue:#244060;
 $sky:#dbedf4;
 
 body {
-	font: 14px/1.5 Helvetica, Arial, sans-serif;
+	//font: 14px/1.5 Helvetica, Arial, sans-serif;
+	font: 16px/1.5 'Open Sans', sans-serif;
+
 	background:$blue;
 }
 h1,h2,h3,h4,h5{
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', sans-serif;
+	// line-height: 1.2;
+	line-height: 1.3;
+	// letter-spacing: -0.7px;
+	text-transform: uppercase;
+	font-weight: bold;
+	//font-family: Helvetica, Arial, sans-serif;
 }
 a,a:link{
 	color:$blue;
@@ -22,17 +35,21 @@ ul.primary {
 	}
 }
 
+#region-content {
+	padding-top: 1em;
+}
 #section-header{
 	background:white image-url('header-bck.png',false,false) repeat-x bottom;
 }
 #zone-menu-wrapper {
-	margin-top: 3px;
+	margin-top: 0.7em;
+	background: #ECECEC;
 }
 #region-branding {
 	margin: 15px 0 0;
 }
 #region-sidebar-first{
-	background:$sky image-url('sidebar-menu-2.png',false,false) repeat-y right;		
+	background:$sky image-url('sidebar-menu-2.png',false,false) repeat-y right;
 	.region-inner{
 		background:image-url('sidebar-menu-1.png',false,false) repeat-x bottom;
 		padding-bottom:60px;
@@ -53,36 +70,46 @@ ul.primary {
 }
 h1,h2{
 	&.site-name{
+		font-family: 'Open Sans', serif;
 		line-height: 28px;
 		font-weight:normal;
 		margin:0;
-		font-size:22px;
+		font-size:1.6em;
 		font-style:italic;
+		text-transform: none;
 	}
 }
 .block-main-menu ul li{
 	font-weight:bold;
 	margin:0;
+	width: 100%;
+	text-align: center;
 	&.sf-depth-1{
 		> a{
 			margin: 0;
-			padding: 10px 5px 0;
+			padding: 0.9em 1em;
 			text-decoration: none;
-			height: 25px;
-			font-size:14px;
+			//border-right: 1px solid #CACACA;
+			border-bottom: 1px solid #cacaca;
+			&:hover{
+				background:#F5F5F5;
+			}
 			&.active{
 				background:#3c6ba0;
-				color:white;				
+				color:white;
+				&:hover{
+					background:#3c6ba0;
+				}
 			}
 		}
 		&:hover,
 		&.sfHover{
 			> a{
 				background:#eee;
-				color:black;			
+				color:black;
 			}
 			> ul{
-				top: 35px;				
+				top: 35px;
 			}
 		}
 	}
@@ -93,7 +120,7 @@ h1,h2{
 		border-bottom: 1px solid #ccc;
 		&:hover{
 			background:#bbb;
-			color:white;			
+			color:white;
 		}
 	}
 }
@@ -109,13 +136,10 @@ h1,h2{
 	padding: 5px 15px;
 }
 
-#boxes-box-indicators_box span{
-	margin-right: 10px;
+#block-boxes-indicators-box span{
+	margin-right: 2px;
 	a{
-		font-size: 16px;
-		&.active{
-			color:black;
-		}
+		font-size: 1.15em;
 	}
 }
 
@@ -132,10 +156,6 @@ h1,h2{
 }
 
 #block-menu-menu-first-sidebar{
-	.block-title{
-		font-size: 16px;
-		padding: 10px;
-	}
 	ul li.leaf {
 		list-style: none;
 		margin: 0;
@@ -254,7 +274,7 @@ tr td:last-child {
 
 .view-action-scope{
 	caption{
-		font-size: 20px;
+		font-size: 1.55em;
 		text-align: left;
 		padding: 10px 0;
 		font-weight: bold;
@@ -318,9 +338,9 @@ tr td:last-child {
 		text-align:center;
 		&:first-child{
 			width: 28%;
-			background-color:#e3e3e3;			
+			background-color:#e3e3e3;
 		}
-	}	
+	}
 	td{
 		text-align:right;
 	}
@@ -367,22 +387,22 @@ tr td:last-child {
 .block-boxes-indicators-box{
 	margin-bottom: 30px;
 	a{
-		background:lighten($blue,20%);
-		color: white;
+		background:#ddd;
+		color: black;
 		text-decoration: none;
 		padding: 10px 15px;
 		&:hover{
-			background:lighten($blue,30%);
+			background:#e6e6e6;
 		}
 		&.active{
-			background:#ddd;
-			color: black;
+			background:lighten($blue,20%);
+			color: white;
 		}
 	}
 }
 
 .node .field-name-body p{
-	text-align: justify;	
+	text-align: justify;
 }
 
 
@@ -402,7 +422,7 @@ fieldset{
 	margin: 15px 0;
 	legend{
 		padding: 0 5px;
-	}	
+	}
 }
 
 .view-countries{
@@ -416,8 +436,8 @@ fieldset{
 		vertical-align: text-top;
 	}
 	.views-field-php{
-		font-size: 18px;
-		font-weight: bold;		
+		font-size: 1.3em;
+		font-weight: bold;
 	}
 }
 
@@ -427,4 +447,14 @@ table td.mini a {
 	padding: 0 10px;
 	color: white;
 	text-decoration: none;
+}
+
+
+.node-legal-framework{
+	&>.field,
+	&>.field-collection-container{
+		margin-bottom: 1.5em;
+		padding: 0.5em;
+		background: #F8F8F8;
+	}
 }
