--- a/sites/all/themes/sediscap/css/sediscap-alpha-default-narrow.css
+++ b/sites/all/themes/sediscap/css/sediscap-alpha-default-narrow.css
@@ -2,3 +2,7 @@
 /* If you are using the default media queries provided by Omega, these styles will also
  *  apply to the normal and widescreen layouts. You may override these styles in the normal 
  *  and widescreen CSS files as appropriate. */
+
+.block-main-menu ul li{
+	width: 50%;
+}
