--- a/sites/all/themes/sediscap/css/sediscap-alpha-default-normal.css
+++ b/sites/all/themes/sediscap/css/sediscap-alpha-default-normal.css
@@ -1,18 +1,14 @@
-/* This file will hold styles that are loaded using the same media query as the wide grid. */
-/*
-.block-main-menu ul li{
-	&.sf-depth-1{
-		> a{
-			padding: 10px 10px 0;
-		}
-	}
-}*/
-/* line 11, ../sass/sediscap-alpha-default-normal.scss */
+/* line 3, ../sass/sediscap-alpha-default-normal.scss */
 .block-main-menu ul li {
   width: 33%;
 }
 
-/* line 15, ../sass/sediscap-alpha-default-normal.scss */
+/* line 7, ../sass/sediscap-alpha-default-normal.scss */
 #region-sidebar-first {
   margin-right: 10px;
+}
+
+/* line 12, ../sass/sediscap-alpha-default-normal.scss */
+#block-boxes-indicators-box span a {
+  display: inline;
 }
