--- a/sites/all/themes/sediscap/sass/sediscap-alpha-default.scss
+++ b/sites/all/themes/sediscap/sass/sediscap-alpha-default.scss
@@ -1,4 +1,4 @@
-/* This file will hold styles for all layouts using the alpha grid (i.e. not the mobile layout). */
+@import "_colors.scss";
 
 #block-delta-blocks-site-name {
 	margin: 18px 0;
