--- a/sites/all/themes/sediscap/css/global.css
+++ b/sites/all/themes/sediscap/css/global.css
@@ -1,92 +1,137 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600);
 @import url(http://fonts.googleapis.com/css?family=PT+Serif+Caption:400,400italic);
-/* line 11, ../sass/global.scss */
+/* line 8, ../sass/global.scss */
 body {
   font: 16px/1.5 "Open Sans", sans-serif;
   background: #244060;
 }
 
-/* line 17, ../sass/global.scss */
-h1, h2, h3, h4, h5 {
+/* line 12, ../sass/global.scss */
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', sans-serif;
   line-height: 1.3;
   text-transform: uppercase;
   font-weight: bold;
 }
 
-/* line 26, ../sass/global.scss */
+/* line 18, ../sass/global.scss */
+h1 {
+  font-size: 2.23em;
+}
+
+/* line 19, ../sass/global.scss */
+h2 {
+  font-size: 1.75em;
+}
+
+/* line 20, ../sass/global.scss */
+h3 {
+  font-size: 1.3em;
+}
+
+/* line 21, ../sass/global.scss */
+h4 {
+  font-size: 1.2em;
+}
+
+/* line 22, ../sass/global.scss */
+h5 {
+  font-size: 1.05em;
+}
+
+/* line 23, ../sass/global.scss */
+h6 {
+  font-size: 1em;
+}
+
+/* line 25, ../sass/global.scss */
+h2.block-title {
+  font-size: 1.1em;
+}
+
+/* line 29, ../sass/global.scss */
+h2.node-title {
+  font-size: 1.75em;
+}
+
+/* line 33, ../sass/global.scss */
 a, a:link {
   color: #244060;
 }
 
-/* line 30, ../sass/global.scss */
+/* line 37, ../sass/global.scss */
 ul.primary {
   margin: 0;
   padding: 0.25em 0 0.5em 1em;
 }
-/* line 33, ../sass/global.scss */
+/* line 40, ../sass/global.scss */
 ul.primary li a {
   padding: 0.5em 1em;
 }
 
-/* line 38, ../sass/global.scss */
+/* line 45, ../sass/global.scss */
+.marker, .form-required {
+  font-size: 1.4em;
+}
+
+/* line 48, ../sass/global.scss */
 #region-content {
   padding-top: 1em;
 }
 
-/* line 41, ../sass/global.scss */
+/* line 51, ../sass/global.scss */
 #section-header {
   background: white;
 }
 
-/* line 44, ../sass/global.scss */
+/* line 54, ../sass/global.scss */
 #zone-menu-wrapper {
   margin-top: 0.7em;
-  background: #ECECEC;
+  background: #ececec;
 }
 
-/* line 48, ../sass/global.scss */
+/* line 58, ../sass/global.scss */
 #region-branding {
   margin: 0;
 }
 
-/* line 51, ../sass/global.scss */
+/* line 61, ../sass/global.scss */
 #region-menu {
   margin: 0;
 }
 
-/* line 54, ../sass/global.scss */
+/* line 64, ../sass/global.scss */
 #region-sidebar-first {
   background: #dbedf4;
   margin: 0;
 }
-/* line 57, ../sass/global.scss */
+/* line 67, ../sass/global.scss */
 #region-sidebar-first .region-inner {
   background: transparent;
   padding-bottom: 0;
 }
 
-/* line 63, ../sass/global.scss */
+/* line 73, ../sass/global.scss */
 #block-delta-blocks-logo {
   background: white;
   text-align: center;
 }
-/* line 66, ../sass/global.scss */
+/* line 76, ../sass/global.scss */
 #block-delta-blocks-logo .logo-img {
   float: none;
   margin: 0 auto;
 }
 
-/* line 71, ../sass/global.scss */
+/* line 81, ../sass/global.scss */
 #block-delta-blocks-site-name {
   margin: 15px 20%;
   text-align: center;
 }
 
-/* line 76, ../sass/global.scss */
+/* line 86, ../sass/global.scss */
 h1.site-name, h2.site-name {
   font-family: 'Open Sans', serif;
-  line-height: 28px;
+  line-height: 1.1em;
   font-weight: normal;
   margin: 0;
   font-size: 1.6em;
@@ -94,12 +139,12 @@ h1.site-name, h2.site-name {
   text-transform: none;
 }
 
-/* line 86, ../sass/global.scss */
+/* line 96, ../sass/global.scss */
 #block-superfish-2 {
   display: none;
 }
 
-/* line 90, ../sass/global.scss */
+/* line 100, ../sass/global.scss */
 .responsive-menus.responsified span.toggler,
 .responsive-menus.responsified.responsive-toggled span.toggler {
   border-radius: 0;
@@ -107,121 +152,156 @@ h1.site-name, h2.site-name {
   padding: 0.4em;
   font-size: 1.5em;
   color: black;
-  background: #ECECEC;
+  background: #ececec;
 }
 
-/* line 98, ../sass/global.scss */
+/* line 108, ../sass/global.scss */
 .responsive-menus.responsified .responsive-menus-simple {
   background: #244060;
 }
 
-/* line 101, ../sass/global.scss */
+/* line 111, ../sass/global.scss */
 .responsive-menus.responsified.responsive-toggled .responsive-menus-simple, .responsive-menus.responsified.responsive-toggled .responsive-menus-simple ul {
   border-radius: 0;
   box-shadow: 0 0 0 transparent;
 }
 
-/* line 105, ../sass/global.scss */
+/* line 115, ../sass/global.scss */
 .block-main-menu ul li {
   font-weight: bold;
   margin: 0;
   width: 100%;
   text-align: center;
 }
-/* line 111, ../sass/global.scss */
+/* line 121, ../sass/global.scss */
 .block-main-menu ul li.sf-depth-1 > a {
   margin: 0;
   padding: 0.9em 1em;
   text-decoration: none;
   border-bottom: 1px solid #cacaca;
 }
-/* line 117, ../sass/global.scss */
+/* line 126, ../sass/global.scss */
 .block-main-menu ul li.sf-depth-1 > a:hover {
-  background: #F5F5F5;
-}
-/* line 120, ../sass/global.scss */
-.block-main-menu ul li.sf-depth-1 > a.active {
-  background: #3c6ba0;
-  color: white;
-}
-/* line 123, ../sass/global.scss */
-.block-main-menu ul li.sf-depth-1 > a.active:hover {
-  background: #3c6ba0;
+  background: #f2f2f2;
+  color: #244060;
 }
 /* line 130, ../sass/global.scss */
-.block-main-menu ul li.sf-depth-1:hover > a, .block-main-menu ul li.sf-depth-1.sfHover > a {
-  background: #eee;
-  color: black;
+.block-main-menu ul li.sf-depth-1 > a.active {
+  background: #4071aa;
+  color: white;
 }
-/* line 134, ../sass/global.scss */
+/* line 133, ../sass/global.scss */
+.block-main-menu ul li.sf-depth-1 > a.active:hover {
+  background: #4071aa;
+  color: white;
+}
+/* line 141, ../sass/global.scss */
+.block-main-menu ul li.sf-depth-1:hover > a, .block-main-menu ul li.sf-depth-1.sfHover > a {
+  background: #f2f2f2;
+  color: #244060;
+}
+/* line 145, ../sass/global.scss */
 .block-main-menu ul li.sf-depth-1:hover > ul, .block-main-menu ul li.sf-depth-1.sfHover > ul {
   top: 46px;
 }
-/* line 139, ../sass/global.scss */
+/* line 150, ../sass/global.scss */
 .block-main-menu ul li.sf-depth-2 a {
   text-align: left;
-  padding: 1.2em 1em;
+  padding: 1.1em 1em;
   text-decoration: none;
-  background: #f8f8f8;
+  background: #f2f2f2;
   color: black;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #d3d3d3;
 }
-/* line 146, ../sass/global.scss */
+/* line 157, ../sass/global.scss */
 .block-main-menu ul li.sf-depth-2 a:hover {
-  background: #fff;
+  background: white;
 }
 
-/* line 152, ../sass/global.scss */
+/* line 163, ../sass/global.scss */
 #zone-content {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 1em;
   background: white;
-  min-height: 600px;
+  min-height: 40em;
 }
 
-/* line 159, ../sass/global.scss */
+/* line 169, ../sass/global.scss */
+#section-footer {
+  color: white;
+}
+/* line 171, ../sass/global.scss */
+#section-footer .block-title {
+  margin-bottom: 1em;
+}
+
+/* line 176, ../sass/global.scss */
+#boxes-box-footer_accesibility li {
+  display: inline-block;
+  margin-right: 1.5em;
+}
+
+/* line 181, ../sass/global.scss */
+#block-boxes-utp-logo {
+  float: right;
+  text-align: center;
+  width: 100%;
+  margin: 3em 0;
+}
+
+/* line 187, ../sass/global.scss */
+#block-boxes-copyright {
+  margin-top: 1.5em;
+  padding-top: 1.5em;
+  border-top: 1px solid white;
+  font-size: 0.9em;
+  text-align: center;
+}
+
+/* line 195, ../sass/global.scss */
 #block-menu-menu-ambitos {
   padding: 5px 15px;
 }
 
-/* line 163, ../sass/global.scss */
+/* line 199, ../sass/global.scss */
 #block-boxes-indicators-box span {
   margin-right: 2px;
 }
-/* line 165, ../sass/global.scss */
+/* line 201, ../sass/global.scss */
 #block-boxes-indicators-box span a {
   font-size: 1.15em;
+  display: block;
 }
 
-/* line 170, ../sass/global.scss */
+/* line 207, ../sass/global.scss */
 #block-boxes-sidebar-menu-desc {
   padding: 10px;
   background: #b4d9e8;
 }
-/* line 173, ../sass/global.scss */
+/* line 210, ../sass/global.scss */
 #block-boxes-sidebar-menu-desc .boxes-box-content {
   margin-top: 5px;
 }
 
-/* line 178, ../sass/global.scss */
+/* line 215, ../sass/global.scss */
 .item-list li {
   list-style: disc;
 }
 
-/* line 183, ../sass/global.scss */
+/* line 220, ../sass/global.scss */
 #block-menu-menu-first-sidebar ul li.leaf {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-/* line 187, ../sass/global.scss */
+/* line 224, ../sass/global.scss */
 #block-menu-menu-first-sidebar ul li.leaf a {
   border-bottom: 1px solid #b4d9e8;
   text-decoration: none;
   display: block;
   padding: 15px;
 }
-/* line 192, ../sass/global.scss */
+/* line 229, ../sass/global.scss */
 #block-menu-menu-first-sidebar ul li.leaf a:hover {
   background: #c7e3ee url('../images/sidebar-menu-2.png') repeat-y right;
 }
@@ -229,14 +309,14 @@ h1.site-name, h2.site-name {
 /**
  * Tables.
  */
-/* line 203, ../sass/global.scss */
+/* line 240, ../sass/global.scss */
 table {
   width: 100%;
   font-size: 0.923em;
   margin: 0 0 10px;
   border: 1px solid #bebfb9;
 }
-/* line 208, ../sass/global.scss */
+/* line 245, ../sass/global.scss */
 table td, table th {
   vertical-align: top;
   padding: 8px 10px;
@@ -244,55 +324,45 @@ table td, table th {
   color: #000;
 }
 
-/* line 217, ../sass/global.scss */
+/* line 254, ../sass/global.scss */
 tr.even,
 tr.odd {
   border-width: 0;
   border-style: solid;
   border-color: #bebfb9;
-  background: #f3f4ee;
+  background: #f5f5f5;
 }
 
-/* line 223, ../sass/global.scss */
+/* line 260, ../sass/global.scss */
 tr.odd {
-  background: #fff;
+  background: white;
 }
 
-/* line 226, ../sass/global.scss */
-tr.drag {
-  background: #fe7;
-}
-
-/* line 229, ../sass/global.scss */
-tr.drag-previous {
-  background: #ffb;
-}
-
-/* line 232, ../sass/global.scss */
+/* line 263, ../sass/global.scss */
 th {
   text-transform: uppercase;
-  background: #e1e2dc;
+  background: #ececec;
   font-weight: normal;
   border-width: 0;
   border-style: solid;
-  border-color: #bebfb9;
+  border-color: #d3d3d3;
   padding: 3px 10px;
 }
-/* line 240, ../sass/global.scss */
+/* line 271, ../sass/global.scss */
 th.active {
-  background: #bdbeb9;
+  background: #f7f7f7;
 }
-/* line 243, ../sass/global.scss */
+/* line 274, ../sass/global.scss */
 th a {
   display: block;
   position: relative;
 }
-/* line 248, ../sass/global.scss */
+/* line 279, ../sass/global.scss */
 th.active a {
   padding: 0 25px 0 0;
   /* LTR */
 }
-/* line 251, ../sass/global.scss */
+/* line 282, ../sass/global.scss */
 th.active img {
   position: absolute;
   top: 3px;
@@ -300,64 +370,20 @@ th.active img {
   /* LTR */
 }
 
-/* line 258, ../sass/global.scss */
-table td.active {
-  background: #e9e9dd;
-}
-
-/* line 261, ../sass/global.scss */
-table tr.odd td.active {
-  background: #f3f4ee;
-}
-
-/* line 265, ../sass/global.scss */
-table tr.selected td.active,
-table tr.selected td {
-  background: #ffc;
-  border-color: #eeb;
-}
-
-/* line 269, ../sass/global.scss */
-table.system-status-report tr {
-  border-bottom: 1px solid #ccc;
-}
-
-/* line 272, ../sass/global.scss */
-table.system-status-report tr.ok {
-  color: #255b1e;
-  background-color: #e5ffe2;
-}
-
-/* line 276, ../sass/global.scss */
-table.system-status-report tr.info {
-  color: #040f37;
-  background-color: #bdf;
-}
-
-/* line 280, ../sass/global.scss */
-table.system-status-report tr.warning {
-  color: #840;
-  background-color: #fffce5;
-}
-
-/* line 284, ../sass/global.scss */
-table.system-status-report tr.error {
-  color: #8c2e0b;
-  background-color: #fef5f1;
-}
-
 /**
  * Exception for webkit bug with the right border of the last cell
  * in some tables, since it's webkit only, we can use :last-child
  */
-/* line 292, ../sass/global.scss */
+/* line 323, ../sass/global.scss */
 tr td:last-child {
   border-right: 1px solid #bebfb9;
   /* LTR */
 }
 
-/* line 299, ../sass/global.scss */
+/* line 330, ../sass/global.scss */
 .view-action-scope {
+  width: 100%;
+  overflow: scroll;
   /*	tr td.views-field{
   		padding: 0;
   		&.views-field-field-report-type{
@@ -376,47 +402,47 @@ tr td:last-child {
   
   	}*/
 }
-/* line 300, ../sass/global.scss */
+/* line 333, ../sass/global.scss */
 .view-action-scope caption {
   font-size: 1.55em;
   text-align: left;
   padding: 10px 0;
   font-weight: bold;
 }
-/* line 323, ../sass/global.scss */
+/* line 356, ../sass/global.scss */
 .view-action-scope table.views-table > tbody > tr > th {
   width: 10%;
 }
-/* line 326, ../sass/global.scss */
+/* line 359, ../sass/global.scss */
 .view-action-scope table.views-table > tbody > tr > td {
   width: 30%;
   padding: 0;
 }
-/* line 330, ../sass/global.scss */
+/* line 363, ../sass/global.scss */
 .view-action-scope table table {
   padding: 0;
 }
 
-/* line 336, ../sass/global.scss */
+/* line 369, ../sass/global.scss */
 #block-oea-form-oea-scope-filter {
   background: #f2f2f2;
 }
-/* line 338, ../sass/global.scss */
+/* line 371, ../sass/global.scss */
 #block-oea-form-oea-scope-filter .block-inner {
   padding: 20px;
 }
-/* line 342, ../sass/global.scss */
+/* line 375, ../sass/global.scss */
 #block-oea-form-oea-scope-filter .form-item,
 #block-oea-form-oea-scope-filter .form-submit {
   float: left;
   margin: 0 20px 0 0;
 }
-/* line 346, ../sass/global.scss */
+/* line 379, ../sass/global.scss */
 #block-oea-form-oea-scope-filter .form-submit {
   margin-top: 15px;
 }
 
-/* line 358, ../sass/global.scss */
+/* line 391, ../sass/global.scss */
 .field-name-field-cstats-indicators,
 .field-name-field-pop-av-age,
 .field-name-field-pop-sex,
@@ -430,7 +456,7 @@ tr td:last-child {
   tr.even .field_indicator_description{
   }*/
 }
-/* line 359, ../sass/global.scss */
+/* line 392, ../sass/global.scss */
 .field-name-field-cstats-indicators td, .field-name-field-cstats-indicators th,
 .field-name-field-pop-av-age td,
 .field-name-field-pop-av-age th,
@@ -450,7 +476,7 @@ tr td:last-child {
   border-right: 1px solid #ccc;
   text-align: center;
 }
-/* line 363, ../sass/global.scss */
+/* line 396, ../sass/global.scss */
 .field-name-field-cstats-indicators td:first-child, .field-name-field-cstats-indicators th:first-child,
 .field-name-field-pop-av-age td:first-child,
 .field-name-field-pop-av-age th:first-child,
@@ -469,7 +495,7 @@ tr td:last-child {
   width: 28%;
   background-color: #e3e3e3;
 }
-/* line 368, ../sass/global.scss */
+/* line 401, ../sass/global.scss */
 .field-name-field-cstats-indicators td,
 .field-name-field-pop-av-age td,
 .field-name-field-pop-sex td,
@@ -480,7 +506,7 @@ tr td:last-child {
 .field-name-field-popd-socioecon td {
   text-align: right;
 }
-/* line 373, ../sass/global.scss */
+/* line 406, ../sass/global.scss */
 .field-name-field-cstats-indicators tr.even td:first-child, .field-name-field-cstats-indicators tr.even th:first-child,
 .field-name-field-pop-av-age tr.even td:first-child,
 .field-name-field-pop-av-age tr.even th:first-child,
@@ -499,7 +525,7 @@ tr td:last-child {
   background-color: #ddd;
 }
 
-/* line 390, ../sass/global.scss */
+/* line 423, ../sass/global.scss */
 .field-name-field-pop-pea > .field-items > .field-item,
 .field-name-field-pop-total > .field-items > .field-item,
 .field-name-field-pop-growth > .field-items > .field-item,
@@ -509,7 +535,7 @@ tr td:last-child {
   padding-left: 28%;
   background: #ccc;
 }
-/* line 394, ../sass/global.scss */
+/* line 427, ../sass/global.scss */
 .field-name-field-pop-pea td, .field-name-field-pop-pea th,
 .field-name-field-pop-total td,
 .field-name-field-pop-total th,
@@ -525,7 +551,7 @@ tr td:last-child {
   border-right: 1px solid #ccc;
   text-align: center;
 }
-/* line 399, ../sass/global.scss */
+/* line 432, ../sass/global.scss */
 .field-name-field-pop-pea td,
 .field-name-field-pop-total td,
 .field-name-field-pop-growth td,
@@ -535,84 +561,84 @@ tr td:last-child {
   text-align: right;
 }
 
-/* line 403, ../sass/global.scss */
+/* line 436, ../sass/global.scss */
 .field-collection-view-final {
   border-bottom: 1px solid #bebfb9;
 }
 
-/* line 406, ../sass/global.scss */
+/* line 439, ../sass/global.scss */
 .field-collection-container {
   border: 0;
   margin: 0;
 }
 
-/* line 411, ../sass/global.scss */
+/* line 444, ../sass/global.scss */
 .block-boxes-indicators-box {
   margin-bottom: 30px;
 }
-/* line 413, ../sass/global.scss */
+/* line 446, ../sass/global.scss */
 .block-boxes-indicators-box a {
   background: #ddd;
   color: black;
   text-decoration: none;
   padding: 10px 15px;
 }
-/* line 418, ../sass/global.scss */
+/* line 451, ../sass/global.scss */
 .block-boxes-indicators-box a:hover {
   background: #e6e6e6;
 }
-/* line 421, ../sass/global.scss */
+/* line 454, ../sass/global.scss */
 .block-boxes-indicators-box a.active {
   background: #4071aa;
   color: white;
 }
 
-/* line 428, ../sass/global.scss */
+/* line 461, ../sass/global.scss */
 .node .field-name-body p {
   text-align: justify;
 }
 
-/* line 433, ../sass/global.scss */
+/* line 466, ../sass/global.scss */
 .webform-container-inline {
   padding: 15px 0;
   margin: 0;
   border-bottom: 1px solid #ccc;
 }
-/* line 437, ../sass/global.scss */
+/* line 470, ../sass/global.scss */
 .webform-container-inline > label {
   width: 30%;
   display: inline-block;
 }
 
-/* line 443, ../sass/global.scss */
+/* line 476, ../sass/global.scss */
 fieldset {
   padding: 19px;
   border: 1px solid #ddd;
   margin: 15px 0;
 }
-/* line 447, ../sass/global.scss */
+/* line 480, ../sass/global.scss */
 fieldset legend {
   padding: 0 5px;
 }
 
-/* line 453, ../sass/global.scss */
+/* line 486, ../sass/global.scss */
 .view-countries .views-row {
   padding: 15px;
   background: #eee;
   list-style: none;
   margin: 0 0 20px;
 }
-/* line 459, ../sass/global.scss */
+/* line 492, ../sass/global.scss */
 .view-countries .views-field-field-country-flag img {
   vertical-align: text-top;
 }
-/* line 462, ../sass/global.scss */
+/* line 495, ../sass/global.scss */
 .view-countries .views-field-php {
   font-size: 1.3em;
   font-weight: bold;
 }
 
-/* line 468, ../sass/global.scss */
+/* line 501, ../sass/global.scss */
 table td.mini a {
   background: #244060;
   font-weight: normal;
@@ -621,22 +647,63 @@ table td.mini a {
   text-decoration: none;
 }
 
-/* line 479, ../sass/global.scss */
+/* line 512, ../sass/global.scss */
 .node-legal-framework > .field, .node-legal-framework > .field-collection-container {
   margin-bottom: 1.5em;
   padding: 0.5em;
   background: #F8F8F8;
 }
 
-/* line 488, ../sass/global.scss */
+/* line 521, ../sass/global.scss */
 .node-official-links .field-collection-container .field-items .field-item {
   margin: 0;
 }
-/* line 490, ../sass/global.scss */
+/* line 523, ../sass/global.scss */
 .node-official-links .field-collection-container .field-items .field-item .field-collection-view {
   padding: 1em;
   margin: 0;
   background: #F5F5F5;
   border-bottom: 0;
   margin-bottom: 1em;
+}
+
+/* line 533, ../sass/global.scss */
+.zoom-controler {
+  text-align: right;
+}
+
+/* line 536, ../sass/global.scss */
+#control-wrap {
+  display: inline-block;
+}
+/* line 538, ../sass/global.scss */
+#control-wrap #controls {
+  margin: 0;
+}
+/* line 541, ../sass/global.scss */
+#control-wrap li {
+  display: inline-block;
+}
+/* line 543, ../sass/global.scss */
+#control-wrap li a {
+  text-decoration: none;
+  background: #b4d9e8;
+  font-size: 30px;
+  font-weight: bold;
+  display: block;
+  margin-left: 0.1em;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  line-height: 1.1;
+}
+/* line 554, ../sass/global.scss */
+#control-wrap li a:hover {
+  background: #c7e3ee;
+}
+
+/* line 562, ../sass/global.scss */
+.field-type-field-collection {
+  width: 100%;
+  overflow: scroll;
 }
