--- a/sites/all/themes/sediscap/sass/global.scss
+++ b/sites/all/themes/sediscap/sass/global.scss
@@ -1,28 +1,35 @@
 @import 'compass';
+@import "_colors.scss";
 
-// @import url(http://fonts.googleapis.com/css?family=Cabin:400,700,400italic,700italic);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600);
-// @import url(http://fonts.googleapis.com/css?family=Lusitana:400,700);
 @import url(http://fonts.googleapis.com/css?family=PT+Serif+Caption:400,400italic);
 
-$blue:#244060;
-$sky:#dbedf4;
 
 body {
-	//font: 14px/1.5 Helvetica, Arial, sans-serif;
 	font: 16px/1.5 'Open Sans', sans-serif;
-
 	background:$blue;
 }
-h1,h2,h3,h4,h5{
+h1,h2,h3,h4,h5,h6{
 	font-family: 'Open Sans', sans-serif;
-	// line-height: 1.2;
 	line-height: 1.3;
-	// letter-spacing: -0.7px;
 	text-transform: uppercase;
 	font-weight: bold;
-	//font-family: Helvetica, Arial, sans-serif;
 }
+h1 { font-size: 2.23em;}
+h2 { font-size: 1.75em;}
+h3 { font-size: 1.3em;}
+h4 { font-size: 1.2em;}
+h5 { font-size: 1.05em;}
+h6 { font-size: 1em;}
+
+h2.block-title {
+  font-size: 1.1em;
+}
+
+h2.node-title {
+  font-size: 1.75em;
+}
+
 a,a:link{
 	color:$blue;
 }
@@ -35,6 +42,9 @@ ul.primary {
 	}
 }
 
+.marker, .form-required{
+	font-size: 1.4em;
+}
 #region-content {
 	padding-top: 1em;
 }
@@ -43,7 +53,7 @@ ul.primary {
 }
 #zone-menu-wrapper {
 	margin-top: 0.7em;
-	background: #ECECEC;
+	background: $lightGray;
 }
 #region-branding {
 	margin: 0;
@@ -75,7 +85,7 @@ ul.primary {
 h1,h2{
 	&.site-name{
 		font-family: 'Open Sans', serif;
-		line-height: 28px;
+		line-height: 1.1em;
 		font-weight:normal;
 		margin:0;
 		font-size:1.6em;
@@ -93,10 +103,10 @@ h1,h2{
 	padding: 0.4em;
 	font-size: 1.5em;
 	color: black;
-	background: #ECECEC;	
+	background: $lightGray;
 }
 .responsive-menus.responsified .responsive-menus-simple{
-	background:#244060;
+	background:$blue;
 }
 .responsive-menus.responsified.responsive-toggled .responsive-menus-simple, .responsive-menus.responsified.responsive-toggled .responsive-menus-simple ul {
     border-radius: 0; box-shadow: 0 0 0 transparent;
@@ -112,24 +122,25 @@ h1,h2{
 			margin: 0;
 			padding: 0.9em 1em;
 			text-decoration: none;
-			//border-right: 1px solid #CACACA;
 			border-bottom: 1px solid #cacaca;
 			&:hover{
-				background:#F5F5F5;
+				background:lighten($lightGray,2.5%);
+				color:$blue;
 			}
 			&.active{
-				background:#3c6ba0;
+				background:lighten($blue,20%);;
 				color:white;
 				&:hover{
-					background:#3c6ba0;
+					background:lighten($blue,20%);
+					color:white;
 				}
 			}
 		}
 		&:hover,
 		&.sfHover{
 			> a{
-				background:#eee;
-				color:black;
+				background:lighten($lightGray,2.5%);
+				color:$blue;
 			}
 			> ul{
 				top: 46px;
@@ -138,22 +149,47 @@ h1,h2{
 	}
 	&.sf-depth-2 a{
 		text-align: left;
-		padding: 1.2em 1em;
+		padding: 1.1em 1em;
 		text-decoration:none;
-		background:#f8f8f8;
+		background:lighten($lightGray,2.5%);
 		color:black;
-		border-bottom: 1px solid #ccc;
+		border-bottom: 1px solid darken($lightGray,10%);
 		&:hover{
-			background:#fff;
+			background:white;
 		}
 	}
 }
 
 #zone-content{
 	margin-top:0;
-	margin-bottom:20px;
+	margin-bottom:1em;
 	background:white;
-	min-height: 600px;
+	min-height: 40em;
+}
+#section-footer{
+	color:white;
+	.block-title{
+		margin-bottom:1em;
+	}
+}
+#boxes-box-footer_accesibility{
+	li{
+		display: inline-block;
+		margin-right: 1.5em;
+	}
+}
+#block-boxes-utp-logo {
+	float: right;
+	text-align: center;
+	width: 100%;
+	margin: 3em 0;
+}
+#block-boxes-copyright{
+	margin-top: 1.5em;
+	padding-top: 1.5em;
+	border-top: 1px solid white;
+	font-size:0.9em;
+	text-align:center;
 }
 
 #block-menu-menu-ambitos {
@@ -164,6 +200,7 @@ h1,h2{
 	margin-right: 2px;
 	a{
 		font-size: 1.15em;
+		display:block;
 	}
 }
 
@@ -218,27 +255,21 @@ tr.odd {
   border-width: 0;
   border-style: solid;
   border-color: #bebfb9;
-  background: #f3f4ee;
+  background: lighten($lightGray,3.5%);
 }
 tr.odd {
-  background: #fff;
-}
-tr.drag {
-  background: #fe7;
-}
-tr.drag-previous {
-  background: #ffb;
+  background: white;
 }
 th {
 	text-transform: uppercase;
-	background: #e1e2dc;
+	background: $lightGray;
 	font-weight: normal;
 	border-width: 0;
 	border-style: solid;
-	border-color: #bebfb9;
+	border-color: darken($lightGray,10%);
 	padding: 3px 10px;
 	&.active {
-		background: #bdbeb9;
+		background: lighten($lightGray,4.5%);
 	}
 	a {
 		display: block;
@@ -255,36 +286,36 @@ th {
 		}
 	}
 }
-table td.active {
-  background: #e9e9dd;
-}
-table tr.odd td.active {
-  background: #f3f4ee;
-}
-table tr.selected td.active,
-table tr.selected td {
-  background: #ffc;
-  border-color: #eeb;
-}
-table.system-status-report tr {
-  border-bottom: 1px solid #ccc;
-}
-table.system-status-report tr.ok {
-  color: #255b1e;
-  background-color: #e5ffe2;
-}
-table.system-status-report tr.info {
-  color: #040f37;
-  background-color: #bdf;
-}
-table.system-status-report tr.warning {
-  color: #840;
-  background-color: #fffce5;
-}
-table.system-status-report tr.error {
-  color: #8c2e0b;
-  background-color: #fef5f1;
-}
+// table td.active {
+//   background: #e9e9dd;
+// }
+// table tr.odd td.active {
+//   background: #f3f4ee;
+// }
+// table tr.selected td.active,
+// table tr.selected td {
+//   background: #ffc;
+//   border-color: #eeb;
+// }
+// table.system-status-report tr {
+//   border-bottom: 1px solid #ccc;
+// }
+// table.system-status-report tr.ok {
+//   color: #255b1e;
+//   background-color: #e5ffe2;
+// }
+// table.system-status-report tr.info {
+//   color: #040f37;
+//   background-color: #bdf;
+// }
+// table.system-status-report tr.warning {
+//   color: #840;
+//   background-color: #fffce5;
+// }
+// table.system-status-report tr.error {
+//   color: #8c2e0b;
+//   background-color: #fef5f1;
+// }
 /**
  * Exception for webkit bug with the right border of the last cell
  * in some tables, since it's webkit only, we can use :last-child
@@ -297,6 +328,8 @@ tr td:last-child {
 
 
 .view-action-scope{
+	width: 100%;
+	overflow: scroll;
 	caption{
 		font-size: 1.55em;
 		text-align: left;
@@ -466,7 +499,7 @@ fieldset{
 }
 
 table td.mini a {
-	background: #244060;
+	background: $blue;
 	font-weight: normal;
 	padding: 0 10px;
 	color: white;
@@ -495,4 +528,38 @@ table td.mini a {
 			margin-bottom: 1em;
 		}
 	}
+}
+
+.zoom-controler {
+    text-align: right;
+}
+#control-wrap {
+	display: inline-block;
+	#controls{
+		margin: 0;
+	}
+	li{
+		display: inline-block;
+		a{
+			text-decoration: none;
+			background: #b4d9e8;
+			font-size: 30px;
+			font-weight: bold;
+			display: block;
+			margin-left: 0.1em;
+			width: 35px;
+			height: 35px;
+			text-align: center;
+			line-height: 1.1;
+			&:hover{
+				background: #c7e3ee;				
+			}
+		}
+	}
+}
+
+
+.field-type-field-collection {
+	width: 100%;
+	overflow: scroll;
 }
