--- a/sites/all/themes/sediscap/sass/sediscap-alpha-default-wide.scss
+++ b/sites/all/themes/sediscap/sass/sediscap-alpha-default-wide.scss
@@ -1,12 +1,4 @@
-/* This file will hold styles that are loaded using the same media query as the wide grid. */
-/*
-.block-main-menu ul li{
-	&.sf-depth-1{
-		> a{
-			padding: 10px 10px 0;
-		}
-	}
-}*/
+@import "_colors.scss";
 
 .block-main-menu ul li.sf-depth-1 > a {
   padding: 0.9em 0.9em;
